--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Religion -- Philosophy'
 - !lcc 'BL'
 - !lcsh 'Religion and science'
+- GITenberg
 title: 'God and the World: A Survey of Thought'
 url: http://www.gutenberg.org/ebooks/30709
